==> best-intheworld/stm32/stm32f103zet6_standard/LVGL/Bsp/touch/touch.c <==
#include "touch.h"

void TOUCH_SCK(uint8_t state)
{
    if(state)
    {
        GPIO_SetBits(TOUCH_SCK_PORT, TOUCH_SCK_PIN);
    }
    else
    {
        GPIO_ResetBits(TOUCH_SCK_PORT, TOUCH_SCK_PIN);
    }
}

void TOUCH_MOSI(uint8_t state)
{
    if(state)
    {
        GPIO_SetBits(TOUCH_MOSI_PORT, TOUCH_MOSI_PIN);
    }
    else
    {
        GPIO_ResetBits(TOUCH_MOSI_PORT, TOUCH_MOSI_PIN);
    }
}

void TOUCH_CS(uint8_t state)
{
    if(state)
    {
        GPIO_SetBits(TOUCH_CS_PORT, TOUCH_CS_PIN);
    }
    else
    {
        GPIO_ResetBits(TOUCH_CS_PORT, TOUCH_CS_PIN);
    }
}

uint8_t touchInit(void)
{
    touch_dev.touchtype = 0;                   /* 默认设置(电阻屏 & 竖屏) */
    touch_dev.touchtype |= 0 & 0x01;  /* 根据LCD判定是横屏还是竖屏 */

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB | RCC_APB2Periph_GPIOF, ENABLE);
    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_InitStruct.GPIO_Pin = TOUCH_PEN_PIN;
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IPU;
    GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(TOUCH_PEN_PORT,&GPIO_InitStruct);
    GPIO_InitStruct.GPIO_Pin = TOUCH_MISO_PIN;
    GPIO_Init(TOUCH_MISO_PORT,&GPIO_InitStruct);
    GPIO_InitStruct.GPIO_Pin = TOUCH_MOSI_PIN;
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(TOUCH_MOSI_PORT,&GPIO_InitStruct);
    GPIO_InitStruct.GPIO_Pin = TOUCH_SCK_PIN;
    GPIO_Init(TOUCH_SCK_PORT,&GPIO_InitStruct);
    GPIO_InitStruct.GPIO_Pin = TOUCH_CS_PIN;
    GPIO_Init(TOUCH_CS_PORT,&GPIO_InitStruct);
    touch_readXY(&touch_dev.x[0],&touch_dev.y[0]);
    AT24C02_Init();
    if(touch_getAdjustData())
    {
        return 0;
    }
    else
    {
        LCD_clear(WHITE);
        touchAdjust();
        touch_saveAdjustData();
    }
    touch_getAdjustData();
    return 1;
}

uint16_t touch_readADC(uint8_t cmd)
{
    uint16_t data = 0;
    TOUCH_SCK(0);
    TOUCH_MOSI(0);
    TOUCH_CS(0);
    touch_writeByte(cmd);
    delay_us(6);//adc转换最多需要6us
    TOUCH_SCK(0);//产生一个时钟清除busy位
    delay_us(1);
    TOUCH_SCK(1);
    delay_us(1);
    TOUCH_SCK(0);
    for(uint8_t i = 0; i < 16; i++)
    {
        data <<= 1;
        TOUCH_SCK(0);//下降沿有效
        delay_us(1);
        TOUCH_SCK(1);
        if(GPIO_ReadInputDataBit(TOUCH_MISO_PORT, TOUCH_MISO_PIN))
        {
            data++;
        }
    }
    data >>= 4;//ADC12位有效
    TOUCH_CS(1);
    return data;
}

void touch_drawPoint(uint16_t x, uint16_t y, uint16_t color)
{
    LCD_drawHorizontalLine(x - 12, y, color, 25); /* 横线 */
    LCD_drawVerticalLine(x, y - 12, color, 25); /* 竖线 */
    LCD_drawPoint(x + 1, y + 1, color);
    LCD_drawPoint(x - 1, y + 1, color);
    LCD_drawPoint(x + 1, y - 1, color);
    LCD_drawPoint(x - 1, y - 1, color);
    LCD_writeCircle(x, y, color, 6);            /* 画中心圈 */
}

uint8_t touchScan(uint8_t mode)
{
    if (GPIO_ReadInputDataBit(TOUCH_PEN_PORT,TOUCH_PEN_PIN) == 0)     /* 有按键按下 */
    {
        if (mode)       /* 读取物理坐标, 无需转换 */
        {
            touch_readXY2(&touch_dev.x[0], &touch_dev.y[0]);
        }
        else if (touch_readXY2(&touch_dev.x[0], &touch_dev.y[0]))     /* 读取屏幕坐标, 需要转换 */
        {
            /* 将X轴 物理坐标转换成逻辑坐标(即对应LCD屏幕上面的X坐标值) */
            touch_dev.x[0] = (signed short)(touch_dev.x[0] - touch_dev.xc) / touch_dev.xfac + width / 2;

            /* 将Y轴 物理坐标转换成逻辑坐标(即对应LCD屏幕上面的Y坐标值) */
            touch_dev.y[0] = (signed short)(touch_dev.y[0] - touch_dev.yc) / touch_dev.yfac + length / 2;
        }

        if ((touch_dev.sta & TP_PRES_DOWN) == 0)   /* 之前没有被按下 */
        {
            touch_dev.sta = TP_PRES_DOWN | TP_CATH_PRES;   /* 按键按下 */
            touch_dev.x[CT_MAX_TOUCH - 1] = touch_dev.x[0];   /* 记录第一次按下时的坐标 */
            touch_dev.y[CT_MAX_TOUCH - 1] = touch_dev.y[0];
        }
    }
    else
    {
        if (touch_dev.sta & TP_PRES_DOWN)      /* 之前是被按下的 */
        {
            touch_dev.sta &= ~TP_PRES_DOWN;    /* 标记按键松开 */
        }
        else     /* 之前就没有被按下 */
        {
            touch_dev.x[CT_MAX_TOUCH - 1] = 0;
            touch_dev.y[CT_MAX_TOUCH - 1] = 0;
            touch_dev.x[0] = 0xFFFF;
            touch_dev.y[0] = 0xFFFF;
        }
    }

    return touch_dev.sta & TP_PRES_DOWN; /* 返回当前的触屏状态 */
}
